[tool.poetry]
name = "reflexion-agent"
version = "0.1.0"
description = ""
authors = ["Prateek Mulye <prateekmulye@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.2.1"
black = "^25.11.0"
isort = "^7.0.0"
langchain = "^1.1.0"
langchain-openai = "^1.1.0"
langchain-tavily = "^0.2.13"
langgraph = "^1.0.4"
poetry-core = ">=2.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
